# hoo-engine

./: .gitignore  Cargo.toml  README.md
.cargo/: config
crates/hoo-meta/: Cargo.toml  README.md
crates/hoo-meta-macros/: Cargo.toml
crates/hoo-meta-macros/src/: lib.rs  main.rs
crates/hoo-meta/src/: basic_types.rs  compound_types.rs  lib.rs  objects.rs  tests.rs  traits.rs  types.rs
crates/hoo-object/: Cargo.toml
crates/hoo-object/src/: exports.rs  lib.rs  tests.rs
resources/: main.wgsl
resources/meshes/: arrow.gltf  cube.gltf
resources/shaders/: compute.wgsl  cursor.wgsl  main.wgsl
src/: lib.rs  main.rs
src/bundle/: mod.rs
src/device/: mod.rs
src/device/graphics/: encoder.rs  mod.rs  resource.rs  utils.rs
src/device/io/: mod.rs
src/editor/: editor.rs  importer.rs  mod.rs
src/global/: configs.rs  mod.rs  resources.rs
src/graphics/: context.rs  mod.rs  pipeline.rs  renderer.rs
src/graphics/passes/: affiliate.rs  cursor_query.rs  mod.rs
src/io/: mod.rs  resource.rs
src/object/: context.rs  entity.rs  mod.rs  space.rs
src/object/components/: mod.rs  static_mesh.rs  static_model.rs  traits.rs  transform.rs  trivial.rs
src/object/objects/: camera.rs  light.rs  mod.rs  static_mesh.rs  static_model.rs
src/object/systems/: camera.rs  graphics.rs  lighting.rs  mod.rs  rotating.rs  traits.rs
src/renderer/: encoder.rs  mod.rs  pipeline.rs  renderer.rs  resource.rs  utils.rs
src/utils/: macros.rs  memory.rs  mod.rs  network.rs  types.rs
static/: index.html  index.js
