[package]
name = "hoo-engine"
version = "0.1.0"
authors = ["wayhoo <wweihao@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "hoo-engine-executable"
path = "src/main.rs"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[profile.dev]
panic = "unwind"

[dependencies]
bitflags = "2.3.3"
futures = "0.3.28"
regex = "1.9.1"
gltf = "1.2.0"
serde = { version = "1.0.178", features = ["derive"] }
nalgebra-glm = { version = "0.18.0", features = ["serde-serialize"] }
strum = "0.25.0"
strum_macros = "0.25.1"
winit = "0.28.6"
env_logger = "0.10.0"
log = "0.4.19"
typed-arena = "2.0.2"
wgpu = "0.17.0"  # src/device/graphics
v8 = "0.75.0"
nalgebra = "0.32.3"
iced = { version = "0.10.0", features = ["debug"] }

[dependencies.hoo-object]
path = "./crates/hoo-object"

[dependencies.hoo-meta]
path = "./crates/hoo-meta"

[dependencies.hoo-meta-macros]
path = "./crates/hoo-meta-macros"

