[package]
name = "hoo-meta-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[[bin]]
name = "hoo-meta-bin"
path = "src/main.rs"

[dependencies]
once_cell = "1.18.0"
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = { version = "2.0.28", features = ["parsing", "full", "extra-traits"] }
v8 = "0.75.0"  # delete it later. for test only

[dependencies.hoo-object]
path = "../hoo-object"

[dependencies.hoo-meta]
path = "../hoo-meta"
